unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/pse__Category__c.field-meta.xml
<CustomField>
    <fullName>pse__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Timecard</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Adjustment</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>