unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/pse__Invoiced__c.field-meta.xml
<CustomField>
    <fullName>pse__Invoiced__c</fullName>
    <formula>IF(pse__Billing_Event__r.pse__Invoiced__c,'Yes','No')</formula>
    <label>Invoiced</label>
    <type>Text</type>
</CustomField>