unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/pse__Is_Released__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Released__c</fullName>
    <formula>IF(pse__Billing_Event__r.pse__Is_Released__c,'Yes','No')</formula>
    <label>Released</label>
    <type>Text</type>
</CustomField>