unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/pse__Miscellaneous_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>pse__Miscellaneous_Adjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Miscellaneous Adjustment</label>
    <referenceTo>pse__Miscellaneous_Adjustment__c</referenceTo>
    <relationshipLabel>Billing Event Items</relationshipLabel>
    <relationshipName>Billing_Event_Items</relationshipName>
    <type>Lookup</type>
</CustomField>