unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/pse__Object_Id__c.field-meta.xml
<CustomField>
    <fullName>pse__Object_Id__c</fullName>
    <description>Id of the billable object that this item was generated from</description>
    <label>Object Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>