unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/pse__Summary__c.field-meta.xml
<CustomField>
    <fullName>pse__Summary__c</fullName>
    <description>Summary of Billing Event Item Description.</description>
    <formula>IF (ISPICKVAL(pse__Category__c, "Expense"),
		SUBSTITUTE(
			SUBSTITUTE(
				IF(ISBLANK(pse__Expense__r.pse__Description__c),
					$Label.pse__billingeventitemexpensesummarydescriptionwithnoexpensedescription,
					SUBSTITUTE($Label.pse__billingeventitemexpensesummarydescription, '{2}', '(' + pse__Expense__r.pse__Description__c + ')')
				), 
				'{0}', 
				pse__Subcategory__c
			),
			'{1}',
			TEXT (pse__Expense__r.pse__Expense_Date__c)
		)
		+ " " + pse__Expense__r.pse__Resource__r.FirstName + " " + pse__Expense__r.pse__Resource__r.LastName,
		IF (ISPICKVAL(pse__Category__c, "Milestone"),
			SUBSTITUTE(
				SUBSTITUTE(
					SUBSTITUTE($Label.pse__billingeventitemmilestonesummarydescription, '{0}', TEXT( pse__Milestone__r.pse__Actual_Date__c)),
					'{1}',
					TEXT ( pse__Milestone__r.pse__Milestone_Amount__c)
				),
				'{2}',
				TEXT (pse__Milestone__r.CurrencyIsoCode)
			),
			pse__Description__c
		)
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Summary of Billing Event Item Description.</inlineHelpText>
    <label>Summary</label>
    <type>Text</type>
</CustomField>