unpackaged/main/default/objects/pse__Billing_Event_Item__c/fields/pse__Timecard_Split__c.field-meta.xml
<CustomField>
    <fullName>pse__Timecard_Split__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timecard Split</label>
    <referenceTo>pse__Timecard__c</referenceTo>
    <relationshipLabel>Billing Event Items</relationshipLabel>
    <relationshipName>Billing_Event_Items</relationshipName>
    <type>Lookup</type>
</CustomField>